* Remove default from and to location and instead use domain
* Update cost_price only from supplier to storage

Version 2.2.0 - 2011-10-25
* Bug fixes (see mercurial logs for details)
* Ensure coherence between planned date of shipments and moves

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)
* Add period to reduce data computation
* Add internal_quantity on move to speedup computation

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-11
* Bug fixes (see mercurial logs for details)
* Use model singleton to define shipment sequences
* Add default search value on inventory, move and shipments

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Add new group "Stock Force Assignment"
* Migrate packing* objects and tables to shipment*
* Return move id in create_move of inventory line

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Added return packings and a wizard to create customer return packing.
* Make assign_try to assign as much possible
* Move assign_try and pick_product from product.product to stock.move
* Added stock_skip_warehouse keyword for products_by_location
  method. The default behaviour is now to compute quantities on all
  child locations for a warehouse.
* Handle average price for products return to supplier
* Added stock_destinations keyword on products_by_location context to
  filter moves to a set of destinations.
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release